builder widget spacing issue fix

--- a/src/styles/sass/components/input-box/mobileBuilder.module.scss
+++ b/src/styles/sass/components/input-box/mobileBuilder.module.scss
@@ -65,7 +65,7 @@
          color: $basecolor; // uses MUI theme variable
       }
     }
-    padding: 14px 12px;
+    padding: 14px 10px;
     &.active {
       background: $white;
       border: 1px solid #C5DADE;
